# StoryTeller

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/features/: auto-extend-and-until.md
src/storyteller/: __init__.py  __main__.py  cli.py  config.py  log.py
src/storyteller/db/: engine.py  models.py  repository.py
src/storyteller/llm/: client.py  tools.py
src/storyteller/llm/prompts/: critic.py  idea_king.py  qa.py  secretary.py  telescope.py  writer.py
src/storyteller/modules/: critic.py  idea_king.py  qa.py  secretary.py  telescope.py  writer.py
src/storyteller/project/: manager.py  models.py
src/storyteller/utils/: chinese.py  markdown.py
tests/: conftest.py  test_cli.py  test_db.py  test_models.py  test_pipeline.py  test_secretary.py  test_utils.py
